Tried to fixed layout problem

--- a/css/02_navigation.css
+++ b/css/02_navigation.css
@@ -3,7 +3,7 @@
 }
 
 .content {
-  display: flex;
+  display: block;
   align-self: flex-start;
 }
 .main-navigation {
